fix: clipping main container resolved

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ main {
     max-width: 600px;  
     width: 95%;        
     overflow: hidden;
+    padding-bottom: 5rem;
 }
 
 main p {
